# zscript

./: .gitignore  CMakeLists.txt  README.md  file.zs  main.cpp
cmake/: Catch2.cmake  CompilerFlags.cmake
include/zscript/AST/: nodes.h
include/zscript/zAST/: nodes.h
include/zscript/zparser/: token.h  zinterpreter.h  zlexer.h  zparser.h  ztoken.h
include/zscript/zutils/: zmatrix.h
ztests/: zmatrix_test.cpp  znodes_test.cpp  zparser_test.cpp
